Correct the button alignment

--- a/css/index.scss
+++ b/css/index.scss
@@ -139,6 +139,7 @@ a {
     color: $primary_color1;
   }
   .btn-success {
+    align-self: center;
     border-radius: 20px;
     background-color: $primary_color2;
     margin-top: 30px;
